interpreter/aufgabe6/minako-syntax.output
Grammar

    0 $accept: start $end

    1 start: program

    2 program: %empty
    3        | program declassignment ';'
    4        | program functiondefinition

    5 $@1: %empty

    6 functiondefinition: type ID $@1 '(' opt_parameterlist ')' '{' statementlist '}'

    7 opt_parameterlist: %empty
    8                  | parameterlist

    9 parameterlist: parameter
   10              | parameter ',' parameterlist

   11 parameter: type ID

   12 functioncall: ID '(' opt_argumentlist ')'

   13 opt_argumentlist: %empty
   14                 | argumentlist

   15 argumentlist: assignment
   16             | argumentlist ',' assignment

   17 statementlist: %empty
   18              | statementlist statement

   19 $@2: %empty

   20 block: '{' $@2 statementlist '}'

   21 $@3: %empty

   22 body: $@3 statement

   23 statement: ifstatement
   24          | forstatement
   25          | whilestatement
   26          | returnstatement ';'
   27          | dowhilestatement ';'
   28          | printf ';'
   29          | declassignment ';'
   30          | statassignment ';'
   31          | functioncall ';'
   32          | block

   33 ifstatement: KW_IF '(' assignment ')' body opt_else

   34 opt_else: %empty
   35         | KW_ELSE body

   36 $@4: %empty

   37 forstatement: KW_FOR '(' $@4 declassignment ';' expr ';' statassignment ')' body
   38             | KW_FOR '(' statassignment ';' expr ';' statassignment ')' body

   39 dowhilestatement: KW_DO body KW_WHILE '(' assignment ')'

   40 whilestatement: KW_WHILE '(' assignment ')' body

   41 returnstatement: KW_RETURN
   42                | KW_RETURN assignment

   43 printf: KW_PRINTF '(' assignment ')'
   44       | KW_PRINTF '(' CONST_STRING ')'

   45 declassignment: type ID
   46               | type ID '=' assignment

   47 type: KW_BOOLEAN
   48     | KW_FLOAT
   49     | KW_INT
   50     | KW_VOID

   51 statassignment: ID '=' assignment

   52 assignment: ID '=' assignment
   53           | expr

   54 expr: simpexpr
   55     | simpexpr EQ simpexpr
   56     | simpexpr NEQ simpexpr
   57     | simpexpr LEQ simpexpr
   58     | simpexpr GEQ simpexpr
   59     | simpexpr LSS simpexpr
   60     | simpexpr GRT simpexpr

   61 simpexpr: simpexpr '+' simpexpr
   62         | simpexpr '-' simpexpr
   63         | simpexpr OR simpexpr
   64         | simpexpr '*' simpexpr
   65         | simpexpr '/' simpexpr
   66         | simpexpr AND simpexpr
   67         | '-' simpexpr
   68         | CONST_INT
   69         | CONST_FLOAT
   70         | CONST_BOOLEAN
   71         | functioncall
   72         | ID
   73         | '(' assignment ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 12 33 37 38 39 40 43 44 73
')' (41) 6 12 33 37 38 39 40 43 44 73
'*' (42) 64
'+' (43) 61
',' (44) 10 16
'-' (45) 62 67
'/' (47) 65
';' (59) 3 26 27 28 29 30 31 37 38
'=' (61) 46 51 52
'{' (123) 6 20
'}' (125) 6 20
error (256)
AND (258) 66
OR (259) 63
EQ (260) 55
NEQ (261) 56
LEQ (262) 57
GEQ (263) 58
LSS (264) 59
GRT (265) 60
KW_BOOLEAN (266) 47
KW_DO (267) 39
KW_ELSE (268) 35
KW_FLOAT (269) 48
KW_FOR (270) 37 38
KW_IF (271) 33
KW_INT (272) 49
KW_PRINTF (273) 43 44
KW_RETURN (274) 41 42
KW_VOID (275) 50
KW_WHILE (276) 39 40
CONST_INT (277) 68
CONST_FLOAT (278) 69
CONST_BOOLEAN (279) 70
CONST_STRING (280) 44
ID (281) 6 11 12 45 46 51 52 72
UMINUS (282)
LOWER_THAN_ELSE (283)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3 4, on right: 1 3 4
functiondefinition (43)
    on left: 6, on right: 4
$@1 (44)
    on left: 5, on right: 6
opt_parameterlist (45)
    on left: 7 8, on right: 6
parameterlist (46)
    on left: 9 10, on right: 8 10
parameter (47)
    on left: 11, on right: 9 10
functioncall (48)
    on left: 12, on right: 31 71
opt_argumentlist (49)
    on left: 13 14, on right: 12
argumentlist (50)
    on left: 15 16, on right: 14 16
statementlist (51)
    on left: 17 18, on right: 6 18 20
block (52)
    on left: 20, on right: 32
$@2 (53)
    on left: 19, on right: 20
body (54)
    on left: 22, on right: 33 35 37 38 39 40
$@3 (55)
    on left: 21, on right: 22
statement (56)
    on left: 23 24 25 26 27 28 29 30 31 32, on right: 18 22
ifstatement (57)
    on left: 33, on right: 23
opt_else (58)
    on left: 34 35, on right: 33
forstatement (59)
    on left: 37 38, on right: 24
$@4 (60)
    on left: 36, on right: 37
dowhilestatement (61)
    on left: 39, on right: 27
whilestatement (62)
    on left: 40, on right: 25
returnstatement (63)
    on left: 41 42, on right: 26
printf (64)
    on left: 43 44, on right: 28
declassignment (65)
    on left: 45 46, on right: 3 29 37
type (66)
    on left: 47 48 49 50, on right: 6 11 45 46
statassignment (67)
    on left: 51, on right: 30 37 38
assignment (68)
    on left: 52 53, on right: 15 16 33 39 40 42 43 46 51 52 73
expr (69)
    on left: 54 55 56 57 58 59 60, on right: 37 38 53
simpexpr (70)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73, on right: 54 55
    56 57 58 59 60 61 62 63 64 65 66 67


State 0

    0 $accept: . start $end

    $default  reduce using rule 2 (program)

    start    go to state 1
    program  go to state 2


State 1

    0 $accept: start . $end

    $end  shift, and go to state 3


State 2

    1 start: program .
    3 program: program . declassignment ';'
    4        | program . functiondefinition

    KW_BOOLEAN  shift, and go to state 4
    KW_FLOAT    shift, and go to state 5
    KW_INT      shift, and go to state 6
    KW_VOID     shift, and go to state 7

    $default  reduce using rule 1 (start)

    functiondefinition  go to state 8
    declassignment      go to state 9
    type                go to state 10


State 3

    0 $accept: start $end .

    $default  accept


State 4

   47 type: KW_BOOLEAN .

    $default  reduce using rule 47 (type)


State 5

   48 type: KW_FLOAT .

    $default  reduce using rule 48 (type)


State 6

   49 type: KW_INT .

    $default  reduce using rule 49 (type)


State 7

   50 type: KW_VOID .

    $default  reduce using rule 50 (type)


State 8

    4 program: program functiondefinition .

    $default  reduce using rule 4 (program)


State 9

    3 program: program declassignment . ';'

    ';'  shift, and go to state 11


State 10

    6 functiondefinition: type . ID $@1 '(' opt_parameterlist ')' '{' statementlist '}'
   45 declassignment: type . ID
   46               | type . ID '=' assignment

    ID  shift, and go to state 12


State 11

    3 program: program declassignment ';' .

    $default  reduce using rule 3 (program)


State 12

    6 functiondefinition: type ID . $@1 '(' opt_parameterlist ')' '{' statementlist '}'
   45 declassignment: type ID .
   46               | type ID . '=' assignment

    '='  shift, and go to state 13

    ';'       reduce using rule 45 (declassignment)
    $default  reduce using rule 5 ($@1)

    $@1  go to state 14


State 13

   46 declassignment: type ID '=' . assignment

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    assignment    go to state 22
    expr          go to state 23
    simpexpr      go to state 24


State 14

    6 functiondefinition: type ID $@1 . '(' opt_parameterlist ')' '{' statementlist '}'

    '('  shift, and go to state 25


State 15

   68 simpexpr: CONST_INT .

    $default  reduce using rule 68 (simpexpr)


State 16

   69 simpexpr: CONST_FLOAT .

    $default  reduce using rule 69 (simpexpr)


State 17

   70 simpexpr: CONST_BOOLEAN .

    $default  reduce using rule 70 (simpexpr)


State 18

   12 functioncall: ID . '(' opt_argumentlist ')'
   52 assignment: ID . '=' assignment
   72 simpexpr: ID .

    '('  shift, and go to state 26
    '='  shift, and go to state 27

    $default  reduce using rule 72 (simpexpr)


State 19

   67 simpexpr: '-' . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 29


State 20

   73 simpexpr: '(' . assignment ')'

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    assignment    go to state 30
    expr          go to state 23
    simpexpr      go to state 24


State 21

   71 simpexpr: functioncall .

    $default  reduce using rule 71 (simpexpr)


State 22

   46 declassignment: type ID '=' assignment .

    $default  reduce using rule 46 (declassignment)


State 23

   53 assignment: expr .

    $default  reduce using rule 53 (assignment)


State 24

   54 expr: simpexpr .
   55     | simpexpr . EQ simpexpr
   56     | simpexpr . NEQ simpexpr
   57     | simpexpr . LEQ simpexpr
   58     | simpexpr . GEQ simpexpr
   59     | simpexpr . LSS simpexpr
   60     | simpexpr . GRT simpexpr
   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    OR   shift, and go to state 32
    EQ   shift, and go to state 33
    NEQ  shift, and go to state 34
    LEQ  shift, and go to state 35
    GEQ  shift, and go to state 36
    LSS  shift, and go to state 37
    GRT  shift, and go to state 38
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 54 (expr)


State 25

    6 functiondefinition: type ID $@1 '(' . opt_parameterlist ')' '{' statementlist '}'

    KW_BOOLEAN  shift, and go to state 4
    KW_FLOAT    shift, and go to state 5
    KW_INT      shift, and go to state 6
    KW_VOID     shift, and go to state 7

    $default  reduce using rule 7 (opt_parameterlist)

    opt_parameterlist  go to state 43
    parameterlist      go to state 44
    parameter          go to state 45
    type               go to state 46


State 26

   12 functioncall: ID '(' . opt_argumentlist ')'

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    $default  reduce using rule 13 (opt_argumentlist)

    functioncall      go to state 21
    opt_argumentlist  go to state 47
    argumentlist      go to state 48
    assignment        go to state 49
    expr              go to state 23
    simpexpr          go to state 24


State 27

   52 assignment: ID '=' . assignment

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    assignment    go to state 50
    expr          go to state 23
    simpexpr      go to state 24


State 28

   12 functioncall: ID . '(' opt_argumentlist ')'
   72 simpexpr: ID .

    '('  shift, and go to state 26

    $default  reduce using rule 72 (simpexpr)


State 29

   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr
   67         | '-' simpexpr .

    $default  reduce using rule 67 (simpexpr)


State 30

   73 simpexpr: '(' assignment . ')'

    ')'  shift, and go to state 51


State 31

   66 simpexpr: simpexpr AND . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 52


State 32

   63 simpexpr: simpexpr OR . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 53


State 33

   55 expr: simpexpr EQ . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 54


State 34

   56 expr: simpexpr NEQ . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 55


State 35

   57 expr: simpexpr LEQ . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 56


State 36

   58 expr: simpexpr GEQ . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 57


State 37

   59 expr: simpexpr LSS . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 58


State 38

   60 expr: simpexpr GRT . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 59


State 39

   61 simpexpr: simpexpr '+' . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 60


State 40

   62 simpexpr: simpexpr '-' . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 61


State 41

   64 simpexpr: simpexpr '*' . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 62


State 42

   65 simpexpr: simpexpr '/' . simpexpr

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 28
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    simpexpr      go to state 63


State 43

    6 functiondefinition: type ID $@1 '(' opt_parameterlist . ')' '{' statementlist '}'

    ')'  shift, and go to state 64


State 44

    8 opt_parameterlist: parameterlist .

    $default  reduce using rule 8 (opt_parameterlist)


State 45

    9 parameterlist: parameter .
   10              | parameter . ',' parameterlist

    ','  shift, and go to state 65

    $default  reduce using rule 9 (parameterlist)


State 46

   11 parameter: type . ID

    ID  shift, and go to state 66


State 47

   12 functioncall: ID '(' opt_argumentlist . ')'

    ')'  shift, and go to state 67


State 48

   14 opt_argumentlist: argumentlist .
   16 argumentlist: argumentlist . ',' assignment

    ','  shift, and go to state 68

    $default  reduce using rule 14 (opt_argumentlist)


State 49

   15 argumentlist: assignment .

    $default  reduce using rule 15 (argumentlist)


State 50

   52 assignment: ID '=' assignment .

    $default  reduce using rule 52 (assignment)


State 51

   73 simpexpr: '(' assignment ')' .

    $default  reduce using rule 73 (simpexpr)


State 52

   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr
   66         | simpexpr AND simpexpr .

    $default  reduce using rule 66 (simpexpr)


State 53

   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   63         | simpexpr OR simpexpr .
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 63 (simpexpr)


State 54

   55 expr: simpexpr EQ simpexpr .
   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    OR   shift, and go to state 32
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 55 (expr)


State 55

   56 expr: simpexpr NEQ simpexpr .
   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    OR   shift, and go to state 32
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 56 (expr)


State 56

   57 expr: simpexpr LEQ simpexpr .
   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    OR   shift, and go to state 32
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 57 (expr)


State 57

   58 expr: simpexpr GEQ simpexpr .
   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    OR   shift, and go to state 32
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 58 (expr)


State 58

   59 expr: simpexpr LSS simpexpr .
   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    OR   shift, and go to state 32
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 59 (expr)


State 59

   60 expr: simpexpr GRT simpexpr .
   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    OR   shift, and go to state 32
    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 60 (expr)


State 60

   61 simpexpr: simpexpr . '+' simpexpr
   61         | simpexpr '+' simpexpr .
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 61 (simpexpr)


State 61

   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   62         | simpexpr '-' simpexpr .
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    AND  shift, and go to state 31
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 62 (simpexpr)


State 62

   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   64         | simpexpr '*' simpexpr .
   65         | simpexpr . '/' simpexpr
   66         | simpexpr . AND simpexpr

    $default  reduce using rule 64 (simpexpr)


State 63

   61 simpexpr: simpexpr . '+' simpexpr
   62         | simpexpr . '-' simpexpr
   63         | simpexpr . OR simpexpr
   64         | simpexpr . '*' simpexpr
   65         | simpexpr . '/' simpexpr
   65         | simpexpr '/' simpexpr .
   66         | simpexpr . AND simpexpr

    $default  reduce using rule 65 (simpexpr)


State 64

    6 functiondefinition: type ID $@1 '(' opt_parameterlist ')' . '{' statementlist '}'

    '{'  shift, and go to state 69


State 65

   10 parameterlist: parameter ',' . parameterlist

    KW_BOOLEAN  shift, and go to state 4
    KW_FLOAT    shift, and go to state 5
    KW_INT      shift, and go to state 6
    KW_VOID     shift, and go to state 7

    parameterlist  go to state 70
    parameter      go to state 45
    type           go to state 46


State 66

   11 parameter: type ID .

    $default  reduce using rule 11 (parameter)


State 67

   12 functioncall: ID '(' opt_argumentlist ')' .

    $default  reduce using rule 12 (functioncall)


State 68

   16 argumentlist: argumentlist ',' . assignment

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    assignment    go to state 71
    expr          go to state 23
    simpexpr      go to state 24


State 69

    6 functiondefinition: type ID $@1 '(' opt_parameterlist ')' '{' . statementlist '}'

    $default  reduce using rule 17 (statementlist)

    statementlist  go to state 72


State 70

   10 parameterlist: parameter ',' parameterlist .

    $default  reduce using rule 10 (parameterlist)


State 71

   16 argumentlist: argumentlist ',' assignment .

    $default  reduce using rule 16 (argumentlist)


State 72

    6 functiondefinition: type ID $@1 '(' opt_parameterlist ')' '{' statementlist . '}'
   18 statementlist: statementlist . statement

    KW_BOOLEAN  shift, and go to state 4
    KW_DO       shift, and go to state 73
    KW_FLOAT    shift, and go to state 5
    KW_FOR      shift, and go to state 74
    KW_IF       shift, and go to state 75
    KW_INT      shift, and go to state 6
    KW_PRINTF   shift, and go to state 76
    KW_RETURN   shift, and go to state 77
    KW_VOID     shift, and go to state 7
    KW_WHILE    shift, and go to state 78
    ID          shift, and go to state 79
    '{'         shift, and go to state 80
    '}'         shift, and go to state 81

    functioncall      go to state 82
    block             go to state 83
    statement         go to state 84
    ifstatement       go to state 85
    forstatement      go to state 86
    dowhilestatement  go to state 87
    whilestatement    go to state 88
    returnstatement   go to state 89
    printf            go to state 90
    declassignment    go to state 91
    type              go to state 92
    statassignment    go to state 93


State 73

   39 dowhilestatement: KW_DO . body KW_WHILE '(' assignment ')'

    $default  reduce using rule 21 ($@3)

    body  go to state 94
    $@3   go to state 95


State 74

   37 forstatement: KW_FOR . '(' $@4 declassignment ';' expr ';' statassignment ')' body
   38             | KW_FOR . '(' statassignment ';' expr ';' statassignment ')' body

    '('  shift, and go to state 96


State 75

   33 ifstatement: KW_IF . '(' assignment ')' body opt_else

    '('  shift, and go to state 97


State 76

   43 printf: KW_PRINTF . '(' assignment ')'
   44       | KW_PRINTF . '(' CONST_STRING ')'

    '('  shift, and go to state 98


State 77

   41 returnstatement: KW_RETURN .
   42                | KW_RETURN . assignment

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    $default  reduce using rule 41 (returnstatement)

    functioncall  go to state 21
    assignment    go to state 99
    expr          go to state 23
    simpexpr      go to state 24


State 78

   40 whilestatement: KW_WHILE . '(' assignment ')' body

    '('  shift, and go to state 100


State 79

   12 functioncall: ID . '(' opt_argumentlist ')'
   51 statassignment: ID . '=' assignment

    '('  shift, and go to state 26
    '='  shift, and go to state 101


State 80

   20 block: '{' . $@2 statementlist '}'

    $default  reduce using rule 19 ($@2)

    $@2  go to state 102


State 81

    6 functiondefinition: type ID $@1 '(' opt_parameterlist ')' '{' statementlist '}' .

    $default  reduce using rule 6 (functiondefinition)


State 82

   31 statement: functioncall . ';'

    ';'  shift, and go to state 103


State 83

   32 statement: block .

    $default  reduce using rule 32 (statement)


State 84

   18 statementlist: statementlist statement .

    $default  reduce using rule 18 (statementlist)


State 85

   23 statement: ifstatement .

    $default  reduce using rule 23 (statement)


State 86

   24 statement: forstatement .

    $default  reduce using rule 24 (statement)


State 87

   27 statement: dowhilestatement . ';'

    ';'  shift, and go to state 104


State 88

   25 statement: whilestatement .

    $default  reduce using rule 25 (statement)


State 89

   26 statement: returnstatement . ';'

    ';'  shift, and go to state 105


State 90

   28 statement: printf . ';'

    ';'  shift, and go to state 106


State 91

   29 statement: declassignment . ';'

    ';'  shift, and go to state 107


State 92

   45 declassignment: type . ID
   46               | type . ID '=' assignment

    ID  shift, and go to state 108


State 93

   30 statement: statassignment . ';'

    ';'  shift, and go to state 109


State 94

   39 dowhilestatement: KW_DO body . KW_WHILE '(' assignment ')'

    KW_WHILE  shift, and go to state 110


State 95

   22 body: $@3 . statement

    KW_BOOLEAN  shift, and go to state 4
    KW_DO       shift, and go to state 73
    KW_FLOAT    shift, and go to state 5
    KW_FOR      shift, and go to state 74
    KW_IF       shift, and go to state 75
    KW_INT      shift, and go to state 6
    KW_PRINTF   shift, and go to state 76
    KW_RETURN   shift, and go to state 77
    KW_VOID     shift, and go to state 7
    KW_WHILE    shift, and go to state 78
    ID          shift, and go to state 79
    '{'         shift, and go to state 80

    functioncall      go to state 82
    block             go to state 83
    statement         go to state 111
    ifstatement       go to state 85
    forstatement      go to state 86
    dowhilestatement  go to state 87
    whilestatement    go to state 88
    returnstatement   go to state 89
    printf            go to state 90
    declassignment    go to state 91
    type              go to state 92
    statassignment    go to state 93


State 96

   37 forstatement: KW_FOR '(' . $@4 declassignment ';' expr ';' statassignment ')' body
   38             | KW_FOR '(' . statassignment ';' expr ';' statassignment ')' body

    ID  shift, and go to state 112

    $default  reduce using rule 36 ($@4)

    $@4             go to state 113
    statassignment  go to state 114


State 97

   33 ifstatement: KW_IF '(' . assignment ')' body opt_else

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    assignment    go to state 115
    expr          go to state 23
    simpexpr      go to state 24


State 98

   43 printf: KW_PRINTF '(' . assignment ')'
   44       | KW_PRINTF '(' . CONST_STRING ')'

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    CONST_STRING   shift, and go to state 116
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    assignment    go to state 117
    expr          go to state 23
    simpexpr      go to state 24


State 99

   42 returnstatement: KW_RETURN assignment .

    $default  reduce using rule 42 (returnstatement)


State 100

   40 whilestatement: KW_WHILE '(' . assignment ')' body

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    assignment    go to state 118
    expr          go to state 23
    simpexpr      go to state 24


State 101

   51 statassignment: ID '=' . assignment

    CONST_INT      shift, and go to state 15
    CONST_FLOAT    shift, and go to state 16
    CONST_BOOLEAN  shift, and go to state 17
    ID             shift, and go to state 18
    '-'            shift, and go to state 19
    '('            shift, and go to state 20

    functioncall  go to state 21
    assignment    go to state 119
    expr          go to state 23
    simpexpr      go to state 24


State 102

   20 block: '{' $@2 . statementlist '}'

    $default  reduce using rule 17 (statementlist)

    statementlist  go to state 120


State 103

   31 statement: functioncall ';' .

    $default  reduce using rule 31 (statement)


State 104

   27 statement: dowhilestatement ';' .

    $default  reduce using rule 27 (statement)


State 105

   26 statement: returnstatement ';' .

    $default  reduce using rule 26 (statement)


State 106

   28 statement: printf ';' .

    $default  reduce using rule 28 (statement)


State 107

   29 statement: declassignment ';' .

    $default  reduce using rule 29 (statement)


State 108

   45 declassignment: type ID .
   46               | type ID . '=' assignment

    '='  shift, and go to state 13

    $default  reduce using rule 45 (declassignment)


State 109

   30 statement: statassignment ';' .

    $default  reduce using rule 30 (statement)


State 110

   39 dowhilestatement: KW_DO body KW_WHILE . '(' assignment ')'

    '('  shift, and go to state 121


State 111

   22 body: $@3 statement .

    $default  reduce using rule 22 (body)


State 112

   51 statassignment: ID . '=' assignment

    '='  shift, and go to state 101


State 113

   37 forstatement: KW_FOR '(' $@4 . declassignment ';' expr ';' statassignment ')' body

    KW_BOOLEAN  shift, and go to state 4
    KW_FLOAT    shift, and go to state 5
    KW_INT      shift, and go to state 6
    KW_VOID     shift, and go to state 7

    declassignment  go to state 122
    type            go to state 92


State 114

   38 forstatement: KW_FOR '(' statassignment . ';' expr ';' statassignment ')' body

    ';'  shift, and go to state 123

